# mcpolly

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  GLOBAL_CLAUDE.md  IDEA.md  LOCAL_DEV.md  PRD_AGENT_STOP.md  README.md  VISION.md  docker-compose.yml  install.sh  test_agent.sh  upgrade.sh
.cursor/rules/: mcpolly.mdc
.github/workflows/: ci.yml  release.yml
src/: alerts.rs  api.rs  auth.rs  db.rs  embeddings.rs  main.rs  mcp.rs  mcp_server.rs  models.rs  templates.rs
templates/: activity_fragment.html  agent_detail.html  alerts.html  alerts_form.html  base.html  dashboard.html  embeddings.html  embeddings_search_results.html  errors.html  knowledge.html  knowledge_search_results.html  login.html  settings.html  settings_key_form.html  setup.html
templates/partials/: activity_entry.html  agent_row.html  agent_tab_errors.html  agent_tab_info.html  alert_row.html
