[package]
name = "mcpolly"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
askama = "0.12"
askama_axum = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
base64 = "0.22"
rmcp = { version = "1", features = ["server", "transport-io", "transport-streamable-http-server"] }
schemars = "1"
sqlite-vec = "0.1"
zerocopy = { version = "0.8", features = ["derive"] }
